Add Nodes SVG Customization doc

--- a/site/Site/Components/Documentation/Nodes/GingerbreadWidget.razor
+++ b/site/Site/Components/Documentation/Nodes/GingerbreadWidget.razor
@@ -14,6 +14,14 @@
 
     <circle class="button" cx="60" cy="70" r="5" />
     <circle class="button" cx="60" cy="90" r="5" />
+
+    <PortRenderer @key="'l'" Port="Node.GetPort(PortAlignment.Left)">
+        <circle class="hand" cx="20" cy="70" r="17.5" />
+    </PortRenderer>
+    
+    <PortRenderer @key="'r'" Port="Node.GetPort(PortAlignment.Right)">
+        <circle class="hand" cx="100" cy="70" r="17.5" />
+    </PortRenderer>
 </g>
 
 @code {
