Add ordering doc and fix navigation buttons

--- a/site/Site/Pages/Documentation/Diagram/Behaviors.razor
+++ b/site/Site/Pages/Documentation/Diagram/Behaviors.razor
@@ -116,5 +116,5 @@ Diagram.RegisterBehavior(new MySelectionBehavior(Diagram));
 
 <NavigationButtons PreviousLink="/documentation/diagram"
                    PreviousTitle="Overview"
-                   NextTitle="Options"
-                   NextLink="/documentation/diagram-options" />
+                   NextTitle="Ordering"
+                   NextLink="/documentation/diagram-ordering" />
