--- a/site/Site/Pages/Documentation/Diagram/Options.razor
+++ b/site/Site/Pages/Documentation/Diagram/Options.razor
@@ -278,7 +278,7 @@
     </tbody>
 </table>
 
-<NavigationButtons PreviousTitle="Behaviors"
-                   PreviousLink="/documentation/diagram-behaviors"
+<NavigationButtons PreviousTitle="Ordering"
+                   PreviousLink="/documentation/diagram-ordering"
                    NextTitle="Keyboard Shortcuts"
                    NextLink="/documentation/keyboard-shortcuts" />
