--- a/site/Site/Pages/Documentation/Nodes/SvgCustomization.razor
+++ b/site/Site/Pages/Documentation/Nodes/SvgCustomization.razor
@@ -141,8 +141,8 @@ protected override void OnInitialized()
     </CascadingValue>
 </div>
 
-<NavigationButtons PreviousTitle="SVG Nodes"
-                   PreviousLink="/documentation/nodes-svg" />
+<NavigationButtons PreviousTitle="Customization"
+                   PreviousLink="/documentation/nodes-customization" />
 
 @code {
     private BlazorDiagram Diagram { get; set; } = new();
