Add Groups Customization (SVG) doc

--- a/site/Site/Pages/Documentation/Groups/SVG.razor
+++ b/site/Site/Pages/Documentation/Groups/SVG.razor
@@ -57,4 +57,6 @@ var group = new SvgGroupModel(new[] { node1, node2 });
 </code></pre>
 
 <NavigationButtons PreviousTitle="Groups"
-                   PreviousLink="/documentation/groups" />
+                   PreviousLink="/documentation/groups"
+                   NextTitle="Customization"
+                   NextLink="/documentation/groups-customization" />
