--- a/site/Site/Pages/Documentation/Nodes/Customization.razor
+++ b/site/Site/Pages/Documentation/Nodes/Customization.razor
@@ -48,7 +48,7 @@ public class AddTwoNumbersNode : NodeModel
 <div class="filename">AddTwoNumbersWidget.razor</div>
 <pre><code class="language-cshtml">
 @@using Blazor.Diagrams.Components.Renderers;
-@@using Site.Models.Nodes;
+@@using YourNamespace;
 
 &lt;div&gt;
     &lt;h5 class=&quot;card-title&quot;&gt;Add&lt;/h5&gt;
