--- a/site/Site/Pages/Documentation/Groups/Overview.razor
+++ b/site/Site/Pages/Documentation/Groups/Overview.razor
@@ -14,7 +14,7 @@
 <h2>Structure</h2>
 
 <p>
-    The component <code>GroupRenderer</code> generates the follolwing structure:
+    The internal component <code>GroupRenderer</code> generates the follolwing structure:
 </p>
 
 <pre><code class="language-cshtml">
