--- a/site/Site/Pages/Documentation/Nodes/Overview.razor
+++ b/site/Site/Pages/Documentation/Nodes/Overview.razor
@@ -13,7 +13,7 @@
 <h2>Structure</h2>
 
 <p>
-    The component <code>NodeRenderer</code> generates the follolwing structure:
+    The internal component <code>NodeRenderer</code> generates the follolwing structure:
 </p>
 
 <pre><code class="language-cshtml">
