Correct ports overview doc

--- a/site/Site/Pages/Documentation/Ports/Overview.razor
+++ b/site/Site/Pages/Documentation/Ports/Overview.razor
@@ -42,7 +42,7 @@
 
 <h2>Shape</h2>
 
-Nodes can have a specific shape, which by default is a rectangle. It is used for two things at the moment:
+Ports can have a specific shape, which by default is a circle. It is used for two things at the moment:
 <ul class="list-disc list-inside mt-2">
     <li><code>ShapeAnglePositionProvider</code>: To return a position for the given angle.</li>
     <li><code>SinglePortAnchor</code>: When <code>UseShapeAndAlignment</code> is true.</li>
