Add links Overview and Anchors documentation

--- a/site/Site/Pages/Documentation/Diagram/Overview.razor
+++ b/site/Site/Pages/Documentation/Diagram/Overview.razor
@@ -8,7 +8,7 @@
 
 <h2>Structure</h2>
 
-The component <code>DiagramCanvas</code> generates the follolwing structure:
+The component <code>DiagramCanvas</code> generates the following structure:
 
 <pre><code class="language-cshtml">
 &lt;div class=&quot;diagram-canvas&quot; tabindex=&quot;-1&quot;&gt;
