--- a/site/Site/Pages/Documentation/Nodes/SVG.razor
+++ b/site/Site/Pages/Documentation/Nodes/SVG.razor
@@ -14,7 +14,7 @@
 <h2>Structure</h2>
 
 <p>
-    The component <code>NodeRenderer</code> generates the follolwing structure:
+    The component <code>NodeRenderer</code> generates the following structure:
 </p>
 
 <pre><code class="language-cshtml">
