--- a/site/Site/Pages/Documentation/Ports/Customization.razor
+++ b/site/Site/Pages/Documentation/Ports/Customization.razor
@@ -7,7 +7,7 @@
 <h1>Ports Customization</h1>
 
 <p>
-    Unulike for other models, customization in this page refers to the model itself, not the UI. <br />
+    Unlike for other models, customization in this page refers to the model itself, not the UI. <br />
     How the ports are represented in the UI is managed by the parent (node or group), no registration is needed.
 </p>
 
