--- a/site/Site/Pages/Documentation/Ports/Overview.razor
+++ b/site/Site/Pages/Documentation/Ports/Overview.razor
@@ -13,7 +13,7 @@
 <h2>Structure</h2>
 
 <p>
-    The internal component <code>PortRenderer</code> generates the follolwing structures: <br />
+    The internal component <code>PortRenderer</code> generates the following structures: <br />
     The classes that the element can have (beside <code>diagram-port</code>) are: <br />
     <ul class="list-disc list-inside ml-4">
         <li>The alignment (e.g. <code>top</code>, <code>bottom</code>)</li>
