Document link routers and path generators

--- a/site/Site/Pages/Documentation/Links/Anchors.razor
+++ b/site/Site/Pages/Documentation/Links/Anchors.razor
@@ -162,7 +162,9 @@ Diagram.Links.Add(new LinkModel(daSourceAnchor, someTargetAnchor));
 </div>
 
 <NavigationButtons PreviousTitle="Links"
-                   PreviousLink="/documentation/links" />
+                   PreviousLink="/documentation/links"
+                   NextTitle="Routers"
+                   NextLink="/documentation/links-routers" />
 
 @code {
     private BlazorDiagram _paDiagram = new();
