Document link markers and vertices

--- a/site/Site/Pages/Documentation/Links/PathGenerators.razor
+++ b/site/Site/Pages/Documentation/Links/PathGenerators.razor
@@ -9,7 +9,7 @@
 <h1>Path Generators</h1>
 
 <p>
-    A <code>PathGenerator</code> is responsible of creating the SVG path for the given route.
+    A <code>PathGenerator</code> is responsible of creating the SVG path for a given route.
 </p>
 
 <h2>Smooth Path Generator</h2>
