Document diagram widgets

--- a/site/Site/Pages/Documentation/Links/Vertices.razor
+++ b/site/Site/Pages/Documentation/Links/Vertices.razor
@@ -9,7 +9,7 @@
 <h1>Link Vertices</h1>
 
 <p>
-    A <code>LinkVertexModel</code> are user-defined points for the link to pass through.
+    <code>LinkVertexModel</code> are user-defined points for the link to pass through.
 </p>
 
 <h2>Usage</h2>
