--- a/site/Site/Pages/Documentation/Links/Anchors.razor
+++ b/site/Site/Pages/Documentation/Links/Anchors.razor
@@ -139,7 +139,7 @@ Diagram.Links.Add(new LinkModel(sourceAnchor, someTargetAnchor));
 
 <p>
     <code>DynamicAnchor</code> chooses the closest position from the given calculated positions.<br />
-    You can check out the list of position providers here.
+    You can check out the list of position providers <a class="underline" href="#">here</a>.
 </p>
 
 <h3>Usage</h3>
