Document position providers

--- a/site/Site/Pages/Documentation/Controls/Overview.razor
+++ b/site/Site/Pages/Documentation/Controls/Overview.razor
@@ -79,7 +79,7 @@ Diagram.Controls.AddFor(SomeModel).Add(new BoundaryControl());
 <h3>Remove Control</h3>
 
 <p>
-	The <code>RemoveControl</code> adds a deletion button positioned using <a class="underline" href="#">Position Providers</a>.
+	The <code>RemoveControl</code> adds a deletion button positioned using <a class="underline" href="/documentation/position-providers">Position Providers</a>.
 </p>
 
 <pre><code class="language-cs">
@@ -117,7 +117,7 @@ Diagram.Controls.AddFor(SomeModel).Add(new ArrowHeadControl(true, customLinkMark
 <h3>Drag New Link Control</h3>
 
 <p>
-	The <code>DragNewLinkControl</code> adds a link creation button positioned using <a class="underline" href="#">Position Providers</a>.<br />
+	The <code>DragNewLinkControl</code> adds a link creation button positioned using <a class="underline" href="/documentation/position-providers">Position Providers</a>.<br />
 	This is mainly for port-less links, the source anchor will be a <code>ShapeIntersectionAnchor</code> by default.
 </p>
 
