interfaces for IBehavior & IDragNewLinkBehavior

--- a/src/Blazor.Diagrams/Components/LinkWidget.razor
+++ b/src/Blazor.Diagrams/Components/LinkWidget.razor
@@ -6,7 +6,7 @@
     if (result == null)
         return;
 
-    var dnlb = BlazorDiagram.GetBehavior<DragNewLinkBehavior>();
+    var dnlb = BlazorDiagram.GetBehavior<IDragNewLinkBehavior>();
     var d = result.FullPath.ToString();
 }
 
