Addressed PR comments

--- a/site/Site/Pages/Documentation/Diagram/Api.razor
+++ b/site/Site/Pages/Documentation/Diagram/Api.razor
@@ -148,7 +148,7 @@
         </tr>
         <tr>
             <td>PanChanged</td>
-            <td>Action?</td>
+            <td>Action&lt;double, double&gt;?</td>
             <td></td>
         </tr>
         <tr>
