--- a/src/Blazor.Diagrams/wwwroot/style.css
+++ b/src/Blazor.Diagrams/wwwroot/style.css
@@ -82,6 +82,8 @@
 .diagram-link foreignObject.diagram-link-label {
     overflow: visible;
     pointer-events: none;
+    width: 1px;
+    height: 1px;
 }
 
 div.diagram-control {
