--- a/samples/SharedDemo/QuickStart.razor
+++ b/samples/SharedDemo/QuickStart.razor
@@ -42,7 +42,7 @@
 &lt;!-- if you want the default styling --&gt;
 &lt;link href="_content/Z.Blazor.Diagrams/default.styles.min.css" rel="stylesheet" /&gt;
 &lt;!-- in the body element --&gt;
-&lt;script src="_content/Z.Blazor.Diagrams/script.min.js"&gt;&lt;/script&gt;</code></pre>
+</code></pre>
                 <div class="callout-block callout-info">
                     <div class="icon-holder">
                         <i class="fas fa-info-circle"></i>
